2012-11-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* gumps/Notebook_gump.cc: when cheating show location of notes in the notebook.
	  
2012-10-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* tools/gnome_shp_thumbnailer.cc: Eliminated deprecation warning.
	* content/bgkeyring/*: Finally fixed forging of blacksword, courtesy of
	  Malignant Manor.
	* imagewin/scale_xbr: Added option (by editing the .h file) to use other
	  variants of the algorithm (but still defaulting to Zenju's version, as it
	  looks best). Changed color metric to a Manhattan metric over RGB space for
	  a small speed boost without visual loss.
	* paths.cc: Fixed opening crates through wall in Monitor store.
	* All others: Fixed sitting on air/sleeping on ground bugs. Fixed a few
	  schedule-related segfaults due to using objects after they have been
	  deleted by more throughly stopping NPCs when offscreen (may have some
	  side-effects, needs testing).

2012-11-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.cc: changed cheat screen keyboard commands so you can easily use 
	  them on non-US keyboards.
	  
2012-11-06	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Fix bug #3581649 by stopping Actor::ready_best_shield from trying to equip
	  the lhand object (weapon).

2012-11-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: Prevent schedules from being executed for off-screen actors.

2012-11-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/ibuf8.cc: Fix out of bounds memory access in 'static' screens

2012-10-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucdisasm.cc: Eliminated warning.
	* shapes/shapeinf.h: Typo in comment.
	* All others: Added 2xBR, 3xBR and 4xBR scalers to Exult. They are considered
	  experimental, and require --enable-nxbr to be passed to ./configure to use.
	  Performance is likely atrocious for the time being.
