@@ -12,3 +12,4 @@ shape_files.txt
 avatar_data.txt
 blends.dat
 container.dat
+autonotes.txt
