@@ -8,3 +8,4 @@ shape_files.txt
 avatar_data.txt
 blends.dat
 container.dat
+autonotes.txt
